--- a/app/DemoPages/Css/B03Style.css
+++ b/app/DemoPages/Css/B03Style.css
@@ -41,11 +41,11 @@ html, body {
 	left: 0;
 	width: 100%;
 	height: 120%;
-	background: #000 url(../images/main_img_blur.jpg) no-repeat top center;
+	background: #000 url(../images/Cover01.bmp) no-repeat top center;
 }
 
 #wrapper {
-	background: url(../images/main_img.jpg) no-repeat top center;
+	background: url(../images/background.bmp) no-repeat top center;
 }
 
 #container {
@@ -110,52 +110,4 @@ html, body {
 	top: 1110px;
 	width:100%;
 	text-align: center;
-}
-
-	/* ----------------------------------- infoTable ----------------------------------- */
-#jsref table.infoTable td, #tags table.infoTable td, #cssref table.infoTable td
-	{
-		width:20%;
-	}
-
-#jsref table.infoTable th, #tags table.infoTable th, #cssref table.infoTable th
-	{
-		color:#333333;
-		font-weight:400;
-	}
-
-#jsref table.infoTable, #tags table.infoTable, #cssref table.infoTable
-	{
-		width:50%;
-	}
-
-table.infoTable {
-	margin-top:15px;
-	border-collapse:collapse;
-}
-
-table.infoTable td {
-	padding: 3px;
-	height: 32px;
-	vertical-align: middle;
-	background:#fff no-repeat center;
-	border:1px solid #dadada;
-}
-
-table.infoTable td.bsProperty
-		{
-		font-family: courier new;
-		white-space: nowrap;
-		}
-
-table.infoTable th {
-	padding-top: 3px;
-	padding-bottom: 3px;
-	padding-left: 10px;
-	padding-right: 10px;
-	height: 15px;
-	vertical-align: middle;
-	text-align: center;
-	background-color:#efefef;
-	border:1px solid #c3c3c3;
 }
